# Git-Desktop-GUI

./: .gitignore  LICENSE  README.md  debug-push-white-screen.md  index.html  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
src/: App.vue  api.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/: main.css
src/components/: ActionsPanel.vue  AppSettingsPanel.vue  BranchPanel.vue  ConfirmDialog.vue  HistoryPanel.vue  ProjectSettingsPanel.vue  RemotePanel.vue  SettingsPanel.vue  StashPanel.vue  StatusPanel.vue  TopBar.vue
src/composables/: useGitActions.js
src/stores/: git.js
src/utils/: retry.js
