[package]
name = "app"
version = "1.8.40"
description = "轻量级 Git 桌面管理工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
url = "2.5"
open = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "process", "macros", "io-util"] }

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
codegen-units = 256
incremental = true
debug = 0
strip = false

[profile.dev.package."*"]
opt-level = 2
debug = 0
